More color contrast fixes in Emiglio, and link styling fixes in Emiglio

--- a/themes/emiglio/css/sass/_base.scss
+++ b/themes/emiglio/css/sass/_base.scss
@@ -6,7 +6,7 @@
 // Colors
 
 $gray: #ddd;
-$yellow: #695237;
+$yellow: #8b712c;
 $red: #843418;
 
 // Typography
